.github/lean_quality/fixtures/research_legacy_refs/negative/public/Formal/AG/Main.lean
module
public import Formal.AG.Research.Basic
